{{$NEXT}}

0.920     2013-07-04 00:30:45 Europe/Berlin

    - Add Documentation

0.900     2013-07-04 00:23:54 Europe/Berlin

    - Finally getting Dist::Zilla::Role::PluginBundle::Merged under control...

0.842     2013-07-03 23:20:21 Europe/Berlin
 
    - Adding Changes stuff.
  
0.840

    - This was the beginning, back in the days, when no Changelog was kept.