@@ -4,7 +4,7 @@ license          = Perl_5
 copyright_holder = Daniel B.
 copyright_year   = 2012
 
-version          = 0.920
+version          = 0.930
 
 [@Filter]
 -bundle          = @Classic
@@ -15,8 +15,11 @@ version          = 0.920
 authority        = cpan:DBR
 
 [AutoMetaResources]
-repository.github   = user:xdbr
 homepage            = https://metacpan.org/module/%{dist}
+repository.type     = git
+repository.url      = git://github.com/xdbr/%{dist}.git
+repository.web      = http://github.com/xdbr/%{dist}
+bugtracker.web      = http://github.com/xdbr/%{dist}/issues
 
 
 [@Git]
