@@ -1,5 +1,7 @@
 {{$NEXT}}
 
+    - Add more information to [AutoMetaResources]
+    
 0.920     2013-07-04 00:30:45 Europe/Berlin
 
     - Add Documentation
